# pkg/api/handler/cartHandler.go
@@ -5,8 +5,8 @@ import (
 	"clean/pkg/domain"
 	"clean/pkg/utils"
 	"fmt"
-	"log"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -14,30 +14,27 @@ import (
 func (cr *UserHandler) AddToCart(c *gin.Context) {
 	//th := c.GetString("id")
 	//fmt.Println(th, "this is ths get string validation")
-	email := c.Writer.Header().Get("email")
+	id := c.Writer.Header().Get("id")
+	user, _ := strconv.ParseUint(id, 0, 0)
+	user_id := uint(user)
 
-	var user domain.UserResponse
-
-	user, _ = cr.AuthService.FindUser(email)
-	fmt.Println(user.ID, user.Email, "user_idavailaljndsflk")
-
-	fmt.Println(user.First_Name, user)
-	// c.Writer.Header().Get("id")
 	var ProductDetails struct {
 		Product_id uint
 		Quantity   uint
 	}
-	//var products domain.Product
 	if err := c.BindJSON(&ProductDetails); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err})
 		return
+
 	}
+
 	products, err := cr.UserService.FindProduct(ProductDetails.Product_id)
 	if err != nil {
-		log.Println("some error happend in finding product")
+		respons := response.ErrorResponse("error finding ", err.Error(), nil)
+		c.Writer.WriteHeader(http.StatusBadRequest)
+		utils.ResponseJSON(c, respons)
 		return
 	}
-	fmt.Println(err, "error printing ")
 	fmt.Println(products.Price, products.Quantity)
 	//total price of products
 	total := products.Price * float32(ProductDetails.Quantity)
@@ -46,36 +43,54 @@ func (cr *UserHandler) AddToCart(c *gin.Context) {
 	product_quantity := ProductDetails.Quantity //value from above struct
 	cart := domain.Cart{
 
-		User_Id:     user.ID,
-		ProductID:   ProductDetails.Product_id,
+		User_Id:     user_id,
+		Product_Id:  ProductDetails.Product_id,
 		Quantity:    ProductDetails.Quantity,
 		Total_Price: total,
 	}
-	Cart, err := cr.UserService.ListCart(user.ID)
+	Cart, err := cr.UserService.ListCart(user_id)
 	fmt.Println(err)
 	for _, l := range Cart {
-		fmt.Println(l.ProductID, "productid new", product_id)
-		if l.ProductID == product_id {
-			quantity, err := cr.UserService.QuantityCart(product_id, user.ID)
-			fmt.Println(product_quantity)
+		fmt.Println(l.Product_Id, "productid new", product_id)
+		if l.Product_Id == product_id {
+			quantity, err := cr.UserService.QuantityCart(product_id, user_id)
+			if err!=nil{
+				res:=response.ErrorResponse("failed to check quantity ",err.Error(),nil)
+				c.Writer.WriteHeader(http.StatusBadRequest)
+				utils.ResponseJSON(c,res)
+				return
+			}
 			totalprice := float32(product_quantity+quantity.Quantity) * products.Price
 			fmt.Println(quantity, err, "atlast found", total)
 			product_quantity += quantity.Quantity
-			err = cr.UserService.UpdateCart(totalprice, product_quantity, product_id, user.ID)
+			err = cr.UserService.UpdateCart(totalprice, product_quantity, product_id, user_id)
 
 			if err != nil {
+				res:=response.ErrorResponse("failed to update cart cart update",err.Error(),nil)
+				c.Writer.WriteHeader(http.StatusBadRequest)
+				utils.ResponseJSON(c,res)
 				return
 			}
 			c.JSON(200, gin.H{
 				"msg": "quantity updated",
 			})
-			c.Abort()
-			return
+	
 		}
 	}
 	err = cr.UserService.CreateCart(cart)
-	fmt.Println(err)
+	if err != nil {
+		res := response.ErrorResponse("failed to put product into cart", err.Error(), nil)
+		c.Writer.WriteHeader(http.StatusBadRequest)
+		utils.ResponseJSON(c, res)
+		return
+	}
+	res := response.SuccessResponse(true, "successfully product aded into cart", "enjoy the shopping")
+	c.Writer.WriteHeader(200)
+	utils.ResponseJSON(c, res)
 }
+
+//--------------------------------------------------------listCart-------------------------
+
 func (cr *UserHandler) ListCart(c *gin.Context) {
 	// var products domain.Product
 	// var userid domain.Users
@@ -85,7 +100,7 @@ func (cr *UserHandler) ListCart(c *gin.Context) {
 	user, err := cr.AuthService.FindUser(email)
 	if err != nil {
 		respons := response.ErrorResponse("oops user not found", err.Error(), nil)
-		c.Writer.WriteHeader(http.StatusBadRequest)
+		c.Writer.WriteHeader(502)
 		utils.ResponseJSON(c, respons)
 		return
 	}
@@ -94,26 +109,23 @@ func (cr *UserHandler) ListCart(c *gin.Context) {
 	cart, err = cr.UserService.ViewCart(user.ID)
 	if err != nil {
 		respons := response.ErrorResponse("oops carts not fetched ", err.Error(), nil)
-		c.Writer.WriteHeader(http.StatusBadRequest)
+		c.Writer.WriteHeader(502)
 		utils.ResponseJSON(c, respons)
 		return
 
 	}
-
-	fmt.Println("user", "cart", cart)
-	fmt.Println(email, user.ID)
 	var totalPrice float32
 	totalPrice, err = cr.UserService.TotalCartPrice(user.ID)
+	if err != nil {
+		respo := response.ErrorResponse("cannot  calculate total amount", err.Error(), nil)
+		c.Writer.WriteHeader(502)
+		utils.ResponseJSON(c, respo)
+	}
 
-	fmt.Println(totalPrice, err)
 	respons := response.SuccessResponse(true, "successfully listed cart", cart, totalPrice)
 	c.Writer.WriteHeader(200)
 	utils.ResponseJSON(c, respons)
 
 	//cart:=cr.UserService.ListCart(user.ID)
 
-}
-func (cr *UserHandler) Checkout(c *gin.Context) {
-	email := c.Writer.Header().Get("email")
-	fmt.Println(email)
 }
